--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "pretest": "rimraf pacts",
     "test": "jest",
-    "publish": "pact-broker publish ./pacts --consumer-app-version=\"$(npx @pact-foundation/absolute-version)\" --auto-detect-version-properties",
-    "can-i-deploy": "pact-broker can-i-deploy --pacticipant sample-consumer --version=\"$(npx @pact-foundation/absolute-version)\" --to-environment production",
+    "publish": "pact-broker publish ./pacts --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --consumer-app-version=\"$(npx @pact-foundation/absolute-version)\" --auto-detect-version-properties",
+    "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --pacticipant sample-consumer --version=\"$(npx @pact-foundation/absolute-version)\" --to-environment production",
     "deploy": "pact-broker record-deployment --pacticipant sample-consumer --version \"$(npx @pact-foundation/absolute-version)\" --environment production"
   },
   "devDependencies": {
