--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "consumer",
-  "version": "1.0.15",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@cantire-corp/cds.lib.generate-pacts-from-swagger": "^1.0.2",
+    "@cantire-corp/cds.lib.swagger-to-pacts": "^1.0.2",
     "axios": "^0.21.1",
     "jest": "^27.5.1"
   },
   "scripts": {
-    "publish": "pact-broker publish ./pacts --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --consumer-app-version=1.0.15 --auto-detect-version-properties",
-    "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --pacticipant sample-consumer --version=1.0.15 --to-environment production",
-    "deploy": "pact-broker record-deployment --pacticipant sample-consumer --version 1.0.15 --environment production",
-    "generate-pacts": "node ./node_modules/cds.lib.generate-pacts-from-swagger/index.js"
+    "publish": "pact-broker publish ./pacts --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --consumer-app-version=1.0.0 --auto-detect-version-properties",
+    "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --pacticipant sample-consumer --version=1.0.0 --to-environment production",
+    "deploy": "pact-broker record-deployment --pacticipant sample-consumer --version 1.0.0 --environment production",
+    "generate-pacts": "node ./node_modules/@cantire-corp/cds.lib.swagger-to-pacts/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
