--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "publish": "pact-broker publish ./pacts --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --consumer-app-version=1.0.0 --auto-detect-version-properties",
     "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --pacticipant sample-consumer --version=1.0.0 --to-environment production",
     "deploy": "pact-broker record-deployment --pacticipant sample-consumer --version 1.0.0 --environment production",
-    "generate-pacts": "node ./node_modules/@cantire-corp/cds.lib.swagger-to-pacts/index.js"
+    "generate-pacts": "node ../cds.lib.swagger-to-pacts/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
