--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consumer",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@cantire-corp/cds.lib.generate-pacts-from-swagger": "^1.0.2",
@@ -9,10 +9,10 @@
     "jest": "^27.5.1"
   },
   "scripts": {
-    "publish": "pact-broker publish ./pacts --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --consumer-app-version=1.0.0 --auto-detect-version-properties",
-    "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantirecorp.pactflow.io --broker-token 2JBH9Z8tsLyEVqwZSMyi2g --pacticipant sample-consumer --version=1.0.0 --to-environment production",
+    "publish": "pact-broker publish ./pacts --broker-base-url https://cantire.pactflow.io --broker-token K3-mXODPjt2oPucr1YDkzw --consumer-app-version=1.0.3 --auto-detect-version-properties",
+    "can-i-deploy": "pact-broker can-i-deploy --broker-base-url https://cantire.pactflow.io --broker-token K3-mXODPjt2oPucr1YDkzw --pacticipant sample-consumer --version=1.0.0 --to-environment production",
     "deploy": "pact-broker record-deployment --pacticipant sample-consumer --version 1.0.0 --environment production",
-    "generate-pacts": "node ../cds.lib.swagger-to-pacts/index.js"
+    "generate-pacts": "node ./node_modules/@cantire-corp/cds.lib.swagger-to-pacts/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
